--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,5 @@
 node_modules
+node_modules/*
 dist
 public/**/*
 k8s/**/*
@@ -6,3 +7,4 @@ src/assets/**/*
 *.cjs
 *.json
 .lintstagedrc
+./node_modules/react-razorpay/src/*.ts
