--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "growinvoice-react-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://dev.growinvoice.com",
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
