--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.11",
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
+    "https": "^1.0.0",
     "https-browserify": "^1.0.0",
     "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
